--- a/package.json
+++ b/package.json
@@ -4,12 +4,59 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "electron index.js"
+    "start": "electron index.js",
+    "package": "electron-packager . cocos-runner --platform=darwin --arch=x64 --out=./cocos-builder --overwrite --ignore=node_modules"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "electron": "^32.0.2"
+  },
+  "dependencies": {
+    "@electron/get": "^3.1.0",
+    "@keyv/serialize": "^1.0.1",
+    "@sec-ant/readable-stream": "^0.5.0",
+    "@sindresorhus/is": "^7.0.1",
+    "@szmarczak/http-timer": "^5.0.1",
+    "@types/http-cache-semantics": "^4.0.4",
+    "@types/node": "^22.5.5",
+    "base64-js": "^1.5.1",
+    "buffer": "^6.0.3",
+    "buffer-crc32": "^1.0.0",
+    "cacheable-lookup": "^7.0.0",
+    "cacheable-request": "^12.0.1",
+    "debug": "^4.3.7",
+    "decompress-response": "^9.0.0",
+    "defer-to-connect": "^2.0.1",
+    "env-paths": "^3.0.0",
+    "extract-zip": "^2.0.1",
+    "form-data-encoder": "^4.0.2",
+    "fs-extra": "^11.2.0",
+    "get-stream": "^9.0.1",
+    "got": "^14.4.2",
+    "graceful-fs": "^4.2.11",
+    "http-cache-semantics": "^4.1.1",
+    "http2-wrapper": "^2.2.1",
+    "ieee754": "^1.2.1",
+    "is-stream": "^4.0.1",
+    "jsonfile": "^6.1.0",
+    "keyv": "^5.0.1",
+    "lowercase-keys": "^3.0.0",
+    "mimic-response": "^4.0.0",
+    "ms": "^2.1.3",
+    "normalize-url": "^8.0.1",
+    "p-cancelable": "^4.0.1",
+    "pend": "^1.2.0",
+    "progress": "^2.0.3",
+    "quick-lru": "^7.0.0",
+    "resolve-alpn": "^1.2.1",
+    "responselike": "^3.0.0",
+    "semver": "^7.6.3",
+    "sumchecker": "^3.0.1",
+    "type-fest": "^4.26.1",
+    "undici-types": "^6.19.8",
+    "universalify": "^2.0.1",
+    "yauzl": "^3.1.3"
   }
 }
