--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "electron index.js",
-    "package": "electron-packager . cocos-runner --platform=darwin --arch=x64 --out=./cocos-builder --overwrite --ignore=node_modules"
+    "package": "electron-packager . cocos-runner --arch=x64 --out=./cocos-builder --overwrite --ignore=node_modules"
   },
   "keywords": [],
   "author": "",
